[gd_scene load_steps=7 format=3 uid="uid://bubeh4ycf6ryi"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_mfbuj"]
[ext_resource type="Theme" uid="uid://fp1h1j23uxgr" path="res://main_theme.tres" id="2_0t601"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk6dx"]
bg_color = Color(0, 0, 0, 0.505882)
border_width_top = 3
border_color = Color(3, 0, 1, 1)

[sub_resource type="Animation" id="Animation_j8fyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2/VBoxContainer/HighScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2/VBoxContainer/LevelLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel2/VBoxContainer/TimePlayedLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel2/VBoxContainer/CorrectWordsLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel2/VBoxContainer/AccuracyLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel2/VBoxContainer/LongestStreakLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Panel2/VBoxContainer/WPMLabel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Panel2/KeyLabels/HighScore:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Panel2/KeyLabels/Level:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Panel2/KeyLabels/TimePlayed:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Panel2/KeyLabels/CorrectWords:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Panel2/KeyLabels/Accuracy:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Panel2/KeyLabels/LongestStreak:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Panel2/KeyLabels/WPM:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("RestartButton:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("GameOverLabel:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/18/type = "bezier"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Panel2:scale:x")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/19/type = "bezier"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Panel2:scale:y")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/20/type = "bezier"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("GameOverLabel:position:y")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(20, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/21/type = "bezier"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("RestartButton:position:y")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(718, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/22/type = "bezier"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("RestartButton:position:x")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(505.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/23/type = "value"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("DifficultySelect:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/24/type = "bezier"
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/path = NodePath("DifficultySelect:position:x")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(661, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_56rib"]
resource_name = "game_over_appear"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2/VBoxContainer/HighScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 1.56667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2/VBoxContainer/LevelLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.56666, 1.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel2/VBoxContainer/TimePlayedLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.73334, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel2/VBoxContainer/CorrectWordsLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.93334, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel2/VBoxContainer/AccuracyLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.10001, 2.26667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel2/VBoxContainer/LongestStreakLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2.3, 2.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Panel2/VBoxContainer/WPMLabel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.46666, 2.63333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Panel2/KeyLabels/HighScore:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.6, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Panel2/KeyLabels/Level:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.7, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Panel2/KeyLabels/TimePlayed:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.833333, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Panel2/KeyLabels/CorrectWords:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Panel2/KeyLabels/Accuracy:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 1.06667, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Panel2/KeyLabels/LongestStreak:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 1.16667, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Panel2/KeyLabels/WPM:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 1.33333, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("RestartButton:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 3.56667, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("GameOverLabel:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/18/type = "bezier"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Panel2:scale:x")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.433333, 0.633333)
}
tracks/19/type = "bezier"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Panel2:scale:y")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.3, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.433333, 0.733333)
}
tracks/20/type = "bezier"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("GameOverLabel:position:y")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-50, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.433333, -41.5),
"times": PackedFloat32Array(0.333333, 0.8)
}
tracks/21/type = "bezier"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("RestartButton:position:y")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(914.12, -0.25, 0, 0.567656, 22.9637, 740, -0.565681, -41.9708, 0.25, 0),
"times": PackedFloat32Array(3.33333, 4)
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("DifficultySelect:modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(2.5, 3.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/23/type = "bezier"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("DifficultySelect:position:x")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1600, -0.25, 0, 0.625213, 789.996, 661, -0.374787, -473.484, 0.325213, -1.52441),
"times": PackedFloat32Array(2.23333, 3.43333)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccyct"]
_data = {
"RESET": SubResource("Animation_j8fyq"),
"game_over_appear": SubResource("Animation_56rib")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfbuj")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0t601")

[node name="Panel2" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(700, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.0
offset_top = -325.0
offset_right = 415.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(415, 247)
theme = ExtResource("2_0t601")
theme_override_styles/panel = SubResource("StyleBoxFlat_nk6dx")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -203.0
offset_right = 425.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "3495"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "7"
vertical_alignment = 1

[node name="TimePlayedLabel" type="Label" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "234 seconds"
vertical_alignment = 1

[node name="CorrectWordsLabel" type="Label" parent="Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "81"
vertical_alignment = 1

[node name="AccuracyLabel" type="Label" parent="Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "583 / 696 (87%)"
vertical_alignment = 1

[node name="LongestStreakLabel" type="Label" parent="Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "99"
vertical_alignment = 1

[node name="WPMLabel" type="Label" parent="Panel2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "65.4"
vertical_alignment = 1

[node name="KeyLabels" type="VBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -203.0
offset_right = -29.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HighScore" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "High Score"
vertical_alignment = 1

[node name="Level" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "Level"
vertical_alignment = 1

[node name="TimePlayed" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "Time Played"
vertical_alignment = 1

[node name="CorrectWords" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "Correct words"
vertical_alignment = 1

[node name="Accuracy" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "Accuracy"
vertical_alignment = 1

[node name="LongestStreak" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "Longest Streak"
vertical_alignment = 1

[node name="WPM" type="Label" parent="Panel2/KeyLabels"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 32
text = "WPM"
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.5
offset_top = -160.0
offset_right = 294.5
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 36
text = "Press ENTER to restart"

[node name="DifficultySelect" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -251.0
offset_right = 139.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_0t601")
alignment = 1
selected = 3
item_count = 5
popup/item_0/text = "Beginner"
popup/item_0/id = 30
popup/item_1/text = "Casual"
popup/item_1/id = 80
popup/item_2/text = "Challenging"
popup/item_2/id = 180
popup/item_3/text = "Expert"
popup/item_3/id = 230
popup/item_4/text = "Insane"
popup/item_4/id = 400

[node name="GameOverLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -398.0
offset_top = 20.0
offset_right = 399.0
offset_bottom = 112.0
grow_horizontal = 2
theme = ExtResource("2_0t601")
theme_override_font_sizes/font_size = 72
text = "Game Over"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ccyct")
}
autoplay = "game_over_appear"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
playback_type = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="item_selected" from="DifficultySelect" to="." method="_on_difficulty_select_item_selected"]
